--- a/atividade_03/src/main/resources/templates/authorTemplate.html
+++ b/atividade_03/src/main/resources/templates/authorTemplate.html
@@ -20,19 +20,24 @@
     <br>
     <div align="center">
         <h1>Register an Author</h1>
-        <form th:action="@{/author/register}" th:object="${author}" method="POST">
-            <label>Name: </label>
-            <input type="text" name="name" required/>
-            <br>
-            <br>
-            <label>Phone: </label>
-            <input type="text" name="phone" required/>
-            <br>
-            <br>
-            <label>E-Mail: </label>
-            <input type="text" name="email" required/>
-            <br>
-            <br>
+        <form action="#" th:action="@{/author/register}" th:object="${author}" method="POST">
+            <table>
+                <tr>
+                    <td>Name: </td>
+                    <td><input type="text" th:field="*{name}" required/></td>
+                    <td th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></td>
+                </tr>
+                <tr>
+                    <td>E-mail: </td>
+                    <td><input type="text" th:field="*{email}" required/></td>
+                    <td th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></td>
+                </tr>
+                <tr>
+                    <td>Phone: </td>
+                    <td><input type="text" th:field="*{phone}" required/></td>
+                    <td th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></td>
+                </tr>
+            </table>
             <div>
                 <input type="submit" value="Register"/>
             </div>
