--- a/atividade_03/src/main/resources/templates/publisherTemplate.html
+++ b/atividade_03/src/main/resources/templates/publisherTemplate.html
@@ -20,19 +20,24 @@
     <br>
     <div align="center">
         <H1>Register a Publisher</H1>
-        <form th:action="@{/publisher/register}" th:object="${publisher}" method="POST">
-            <label>Name: </label>
-            <input type="text" name="name" required/>
-            <br>
-            <br>
-            <label>Address: </label>
-            <input type="text" name="address" required/>
-            <br>
-            <br>
-            <label>Founded: </label>
-            <input type="date" name="founded" required/>
-            <br>
-            <br>
+        <form action="#" th:action="@{/publisher/register}" th:object="${publisher}" method="POST">
+            <table>
+                <tr>
+                    <td>Name: </td>
+                    <td><input type="text" th:field="*{name}" required/></td>
+                    <td th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></td>
+                </tr>
+                <tr>
+                    <td>Address: </td>
+                    <td><input type="text" th:field="*{address}" required/></td>
+                    <td th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></td>
+                </tr>
+                <tr>
+                    <td>Founded: </td>
+                    <td><input type="date" th:field="*{founded}" required/></td>
+                    <td th:if="${#fields.hasErrors('founded')}" th:errors="*{founded}"></td>
+                </tr>
+            </table>
             <div>
                 <input type="submit" value="Register"/>
             </div>
@@ -49,6 +54,7 @@
                 <th>Name</th>
                 <th>Address</th>
                 <th>Founded</th>
+                <th>Details</th>
             </tr>
         
             <tr th:each="publisher : ${publishers}">
@@ -56,6 +62,7 @@
                 <td th:text="${publisher.name}"></td>
                 <td th:text="${publisher.address}"></td>
                 <td th:text="${publisher.founded}"></td>
+                <td><a th:href="@{'/publisher/details/' + ${publisher.id}}">Details</a></td>
             </tr>
         </table>
     </div>
