--- a/atividade_03/src/main/resources/templates/publisherTemplate.html
+++ b/atividade_03/src/main/resources/templates/publisherTemplate.html
@@ -24,12 +24,12 @@
             <table>
                 <tr>
                     <td>Name: </td>
-                    <td><input type="text" th:field="*{name}" required/></td>
+                    <td><input type="text" th:field="*{name}" placeholder="Enter a Name" required/></td>
                     <td th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></td>
                 </tr>
                 <tr>
                     <td>Address: </td>
-                    <td><input type="text" th:field="*{address}" required/></td>
+                    <td><input type="text" th:field="*{address}" placeholder="Enter an Address" required/></td>
                     <td th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></td>
                 </tr>
                 <tr>
