--- a/atividade_03/src/main/resources/templates/publisherDetails.html
+++ b/atividade_03/src/main/resources/templates/publisherDetails.html
@@ -14,7 +14,9 @@
     <div align="center">
         <h1 align="center"><a href="/">Menu</a></h1>
         <br>
-        <h3 align="center"><a href="/publisher/template">Publisher</a></h3>
+        <h3 align="center"><a href="/author/template">Author</a></h3>
+        <h3 align="center"><a href="/book/template">Book</a></h3>
+        <h3 align="center"><a href="/publisher/template">Return</a></h3>
         <br>
         <h3>Publisher Details</h3>
         <br>
