--- a/atividade_03/src/main/resources/templates/authorDetails.html
+++ b/atividade_03/src/main/resources/templates/authorDetails.html
@@ -12,21 +12,55 @@
 </head>
 <body>
     <div align="center">
+
         <h1 align="center"><a href="/">Menu</a></h1>
         <br>
         <h3 align="center"><a href="/book/template">Book</a></h3>
         <h3 align="center"><a href="/publisher/template">Publisher</a></h3>
         <h3 align="center"><a href="/author/template">Return</a></h3>
         <br>
+
         <h3>Author Details</h3>
+        <table>
+            <tr>
+                <td>Id:</td>
+                <td><span th:text="${author.id}"></span></td>
+            </tr>
+            <tr>
+                <td>Name:</td>
+                <td><span th:text="${author.name}"></span></td>
+            </tr>
+            <tr>
+                <td>E-mail:</td>
+                <td><span th:text="${author.email}"></span></td>
+            </tr>
+            <tr>
+                <td>Phone:</td>
+                <td><span th:text="${author.phone}"></span></td>
+            </tr>
+        </table>
         <br>
-        <b>ID: </b><span th:text="${author.id}"></span>
+
         <br>
-        <b>Name: </b><span th:text="${author.name}"></span>
-        <br>
-        <b>E-mail: </b><span th:text="${author.email}"></span>
-        <br>
-        <b>Phone: </b><span th:text="${author.phone}"></span>
+        <form th:action="@{/author/linkBook(author_id = ${author.id})}" method="POST">
+            <table>
+                <tr>
+                    <td>Book: </td>
+                    <td>
+                        <select name="id" required>
+                            <option value="">Choose a Book</option>
+                            <option th:each="book : ${books}"
+                                    th:value="${book.id}"
+                                    th:text="${book.name}">
+                            </option>
+                        </select>
+                    </td>
+                </tr>
+            </table>
+            <div>
+                <input type="submit" value="Link Book" />
+            </div>
+        </form>
         <br>
         <br>
         <h2>Books</h2>
@@ -38,12 +72,14 @@
                     <th>Name</th>
                     <th>Category</th>
                     <th>Published</th>
+                    <th>Publisher</th>
                 </tr>
-                <tr th:each="book : ${books}">
+                <tr th:each="book : ${author.books}">
                     <td th:text="${book.id}"></td>
                     <td th:text="${book.name}"></td>
                     <td th:text="${book.category}"></td>
                     <td th:text="${book.published}"></td>
+                    <td th:text="${book.publisher.name}"></td>
                 </tr>
             </table>
         </div>
